# launch

./: .gitattributes  .gitignore  .gitmodules  README.md  USB.sch  fp-lib-table  launch-bom.csv  launch.kicad_pcb  launch.pro  launch.sch  power.sch  qmk.sh  sym-lib-table  virgo-keyboard.kicad_pcb  virgo-keyboard.sch
benchmark/: Cargo.toml
lib/: launch.dcm  launch.lib
models/: 1003-002-01100.stp  BSPG1350.igs  BSPG1425.stp  CPG1232.stp  LED_1515.FCStd  LED_1515.step  M-12401610E42A-REVT2.stp  OSC_2.5x3.2.step  PTN5110.FCStd  PTN5110.step  PUSB3FR4.FCStd  PUSB3FR4.step  SOT764-1.step  USB7206.FCStd  USB7206.step
packaging/: Launch_Packaging_reference.step  launch-keyboard-box-bottom.ai  launch-keyboard-box-top_with-artwork.ai
pcb/: .gitignore  I2C.md  USB.kicad_sch  USB.sch  launch-bom.csv  launch-cache.lib  launch.kicad_dru  launch.kicad_pcb  launch.kicad_prl  launch.kicad_pro  launch.kicad_sch  launch.pro  launch.sch  (+3 more)
pcb-common/: README.md  launch.kicad_sym
pcb-heavy/: launch-heavy.kicad_pcb  launch-heavy.kicad_prl  launch-heavy.kicad_pro  launch-heavy.kicad_sch  models
pcb-iso/: .gitignore  I2C.md  USB.kicad_sch  docs  launch-iso.kicad_prl  launch-iso.kicad_pro  launch-iso.kicad_sch  models  power.kicad_sch
pcb-lite/: fp-lib-table  launch-lite.kicad_prl  launch-lite.kicad_pro  launch-lite.kicad_sch  power.kicad_sch
pcb-lite-iso/: .gitignore  launch-lite-iso.kicad_prl  launch-lite-iso.kicad_pro  launch-lite-iso.kicad_sch  power.kicad_sch
pcb-tenkey/: launch-tenkey.kicad_pcb  launch-tenkey.kicad_prl  launch-tenkey.kicad_pro  launch-tenkey.kicad_sch
(+104 files in other folders)
